[gd_scene load_steps=11 format=4 uid="uid://c3kvlpucmqp8j"]

[ext_resource type="Script" path="res://game.gd" id="1_h302l"]
[ext_resource type="Texture2D" uid="uid://8kdwngd67ps0" path="res://Платформер/Map/Tilemap/tilemap_packed.png" id="1_inqnf"]
[ext_resource type="Texture2D" uid="uid://b4i1177hck300" path="res://Платформер/Map/Tilemap/tilemap-backgrounds_packed.png" id="1_pfcpr"]
[ext_resource type="PackedScene" uid="uid://dhxdpykhnjjeu" path="res://player.tscn" id="2_avcrt"]
[ext_resource type="Texture2D" uid="uid://b0ygcilypqd86" path="res://Платформер/Map/Tilemap/Tiles/i (1).webp" id="6_e52x1"]
[ext_resource type="Texture2D" uid="uid://bgx7iar0pmk3e" path="res://Платформер/1.png" id="7_wm3a2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ngjjd"]
texture = ExtResource("1_pfcpr")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0

[sub_resource type="TileSet" id="TileSet_tkotr"]
sources/1 = SubResource("TileSetAtlasSource_ngjjd")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b4hy7"]
texture = ExtResource("1_inqnf")
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0

[sub_resource type="TileSet" id="TileSet_lyr7k"]
physics_layer_0/collision_layer = 3
sources/0 = SubResource("TileSetAtlasSource_b4hy7")

[node name="game" type="Node2D"]
script = ExtResource("1_h302l")

[node name="back_tile" type="TileMapLayer" parent="."]
position = Vector2(65, 5)
tile_map_data = PackedByteArray("AAD5/w4AAQAAAAAAAAD5/w8AAQAAAAEAAAD5/xAAAQAAAAIAAAD5/xEAAQAAAAMAAAD6/w4AAQABAAAAAAD6/w8AAQABAAEAAAD6/xAAAQABAAIAAAD6/xEAAQABAAMAAAD7/w4AAQACAAAAAAD7/w8AAQACAAEAAAD7/xAAAQACAAIAAAD7/xEAAQACAAMAAAD8/w4AAQADAAAAAAD8/w8AAQADAAEAAAD8/xAAAQADAAIAAAD8/xEAAQADAAMAAAD9/w4AAQAEAAAAAAD9/w8AAQAEAAEAAAD9/xAAAQAEAAIAAAD9/xEAAQAEAAMAAAD+/w4AAQAFAAAAAAD+/w8AAQAFAAEAAAD+/xAAAQAFAAIAAAD+/xEAAQAFAAMAAAD//w4AAQAAAAAAAAD//w8AAQAAAAEAAAD//xAAAQAAAAIAAAD//xEAAQAAAAMAAAAAAA4AAQABAAAAAAAAAA8AAQABAAEAAAAAABAAAQABAAIAAAAAABEAAQABAAMAAAABAA4AAQACAAAAAAABAA8AAQACAAEAAAABABAAAQACAAIAAAABABEAAQACAAMAAAACAA4AAQADAAAAAAACAA8AAQADAAEAAAACABAAAQADAAIAAAACABEAAQADAAMAAAADAA4AAQAEAAAAAAADAA8AAQAEAAEAAAADABAAAQAEAAIAAAADABEAAQAEAAMAAAAEAA4AAQAFAAAAAAAEAA8AAQAFAAEAAAAEABAAAQAFAAIAAAAEABEAAQAFAAMAAAAFAA4AAQAAAAAAAAAFAA8AAQAAAAEAAAAFABAAAQAAAAIAAAAFABEAAQAAAAMAAAAGAA4AAQABAAAAAAAGAA8AAQABAAEAAAAGABAAAQABAAIAAAAGABEAAQABAAMAAAAHAA4AAQACAAAAAAAHAA8AAQACAAEAAAAHABAAAQACAAIAAAAHABEAAQACAAMAAAAIAA4AAQADAAAAAAAIAA8AAQADAAEAAAAIABAAAQADAAIAAAAIABEAAQADAAMAAAAJAA4AAQAEAAAAAAAJAA8AAQAEAAEAAAAJABAAAQAEAAIAAAAJABEAAQAEAAMAAAAKAA4AAQAFAAAAAAAKAA8AAQAFAAEAAAAKABAAAQAFAAIAAAAKABEAAQAFAAMAAAALAA4AAQAAAAAAAAALAA8AAQAAAAEAAAALABAAAQAAAAIAAAALABEAAQAAAAMAAAAMAA4AAQABAAAAAAAMAA8AAQABAAEAAAAMABAAAQABAAIAAAAMABEAAQABAAMAAAANAA4AAQACAAAAAAANAA8AAQACAAEAAAANABAAAQACAAIAAAANABEAAQACAAMAAAAOAA4AAQADAAAAAAAOAA8AAQADAAEAAAAOABAAAQADAAIAAAAOABEAAQADAAMAAAAPAA4AAQAEAAAAAAAPAA8AAQAEAAEAAAAPABAAAQAEAAIAAAAPABEAAQAEAAMAAAAQAA4AAQAFAAAAAAAQAA8AAQAFAAEAAAAQABAAAQAFAAIAAAAQABEAAQAFAAMAAAARAA4AAQAAAAAAAAARAA8AAQAAAAEAAAARABAAAQAAAAIAAAARABEAAQAAAAMAAAASAA4AAQABAAAAAAASAA8AAQABAAEAAAASABAAAQABAAIAAAASABEAAQABAAMAAAATAA4AAQACAAAAAAATAA8AAQACAAEAAAATABAAAQACAAIAAAATABEAAQACAAMAAAAUAA4AAQADAAAAAAAUAA8AAQADAAEAAAAUABAAAQADAAIAAAAUABEAAQADAAMAAAAVAA4AAQAEAAAAAAAVAA8AAQAEAAEAAAAVABAAAQAEAAIAAAAVABEAAQAEAAMAAAAWAA4AAQAFAAAAAAAWAA8AAQAFAAEAAAAWABAAAQAFAAIAAAAWABEAAQAFAAMAAAAXAA4AAQAAAAAAAAAXAA8AAQAAAAEAAAAXABAAAQAAAAIAAAAXABEAAQAAAAMAAAAYAA4AAQABAAAAAAAYAA8AAQABAAEAAAAYABAAAQABAAIAAAAYABEAAQABAAMAAAAZAA4AAQACAAAAAAAZAA8AAQACAAEAAAAZABAAAQACAAIAAAAZABEAAQACAAMAAAAaAA4AAQADAAAAAAAaAA8AAQADAAEAAAAaABAAAQADAAIAAAAaABEAAQADAAMAAAAbAA4AAQAEAAAAAAAbAA8AAQAEAAEAAAAbABAAAQAEAAIAAAAbABEAAQAEAAMAAAAcAA4AAQAFAAAAAAAcAA8AAQAFAAEAAAAcABAAAQAFAAIAAAAcABEAAQAFAAMAAAD5/xIAAQAAAAMAAAD6/xIAAQABAAMAAAD7/xIAAQACAAMAAAD8/xIAAQADAAMAAAD9/xIAAQAEAAMAAAD+/xIAAQAFAAMAAAD//xIAAQAAAAMAAAAAABIAAQABAAMAAAABABIAAQACAAMAAAACABIAAQADAAMAAAADABIAAQAEAAMAAAAEABIAAQAFAAMAAAAFABIAAQAAAAMAAAAGABIAAQABAAMAAAAHABIAAQACAAMAAAAIABIAAQADAAMAAAAJABIAAQAEAAMAAAAKABIAAQAFAAMAAAALABIAAQAAAAMAAAAMABIAAQABAAMAAAANABIAAQACAAMAAAAOABIAAQADAAMAAAAPABIAAQAEAAMAAAAQABIAAQAFAAMAAAARABIAAQAAAAMAAAASABIAAQABAAMAAAATABIAAQACAAMAAAAUABIAAQADAAMAAAAVABIAAQAEAAMAAAAWABIAAQAFAAMAAAARABMAAQAEAAMAAAASABMAAQAFAAMAAAATABMAAQACAAMAAAAUABMAAQADAAMAAAAVABMAAQAEAAMAAAAWABMAAQAFAAMAAAAXABMAAQAAAAMAAAAYABMAAQABAAMAAAAZABMAAQACAAMAAAAaABMAAQADAAMAAAAbABMAAQAEAAMAAAAcABMAAQAFAAMAAAAXABIAAQAAAAMAAAAYABIAAQABAAMAAAAZABIAAQACAAMAAAAaABIAAQADAAMAAAAbABIAAQAEAAMAAAAcABIAAQAFAAMAAAANABMAAQAAAAMAAAAOABMAAQABAAMAAAAPABMAAQACAAMAAAAQABMAAQADAAMAAAAHABMAAQAAAAMAAAAIABMAAQABAAMAAAAJABMAAQACAAMAAAAKABMAAQADAAMAAAALABMAAQAEAAMAAAAMABMAAQAFAAMAAAABABMAAQAAAAMAAAACABMAAQABAAMAAAADABMAAQACAAMAAAAEABMAAQADAAMAAAAFABMAAQAEAAMAAAAGABMAAQAFAAMAAAD7/xMAAQACAAMAAAD8/xMAAQADAAMAAAD9/xMAAQAEAAMAAAD+/xMAAQAFAAMAAAD//xMAAQAEAAMAAAAAABMAAQAFAAMAAAD5/xMAAQAAAAMAAAD6/xMAAQABAAMAAAD7/wEAAQACAAAAAAD8/wEAAQADAAAAAAD9/wEAAQAEAAAAAAD+/wEAAQAFAAAAAAD//wEAAQAAAAAAAAAAAAEAAQABAAAAAAD7/wIAAQACAAAAAAD8/wIAAQADAAAAAAD9/wIAAQAEAAAAAAD+/wIAAQAFAAAAAAD//wIAAQAEAAAAAAAAAAIAAQAFAAAAAAD7/wMAAQACAAAAAAD8/wMAAQADAAAAAAD9/wMAAQAEAAAAAAD+/wMAAQAFAAAAAAD//wMAAQAEAAAAAAAAAAMAAQAFAAAAAAD7/wQAAQACAAAAAAD8/wQAAQADAAAAAAD9/wQAAQAEAAAAAAD+/wQAAQAFAAAAAAD//wQAAQAEAAAAAAAAAAQAAQAFAAAAAAD7/wUAAQACAAAAAAD8/wUAAQADAAAAAAD9/wUAAQAEAAAAAAD+/wUAAQAFAAAAAAD//wUAAQAEAAAAAAAAAAUAAQAFAAAAAAD7/wYAAQACAAAAAAD8/wYAAQADAAAAAAD9/wYAAQAEAAAAAAD+/wYAAQAFAAAAAAD//wYAAQAEAAAAAAAAAAYAAQAFAAAAAAD7/wcAAQACAAAAAAD8/wcAAQADAAAAAAD9/wcAAQAEAAAAAAD+/wcAAQAFAAAAAAD//wcAAQAEAAAAAAAAAAcAAQAFAAAAAAD7/wgAAQACAAAAAAD8/wgAAQADAAAAAAD9/wgAAQAEAAAAAAD+/wgAAQAFAAAAAAD//wgAAQAEAAAAAAAAAAgAAQAFAAAAAAD7/wkAAQACAAAAAAD8/wkAAQADAAAAAAD9/wkAAQAEAAAAAAD+/wkAAQAFAAAAAAD//wkAAQAEAAAAAAAAAAkAAQAFAAAAAAD7/woAAQACAAAAAAD8/woAAQADAAAAAAD9/woAAQAEAAAAAAD+/woAAQAFAAAAAAD//woAAQAEAAAAAAAAAAoAAQAFAAAAAAD7/wsAAQACAAAAAAD8/wsAAQADAAAAAAD9/wsAAQAEAAAAAAD+/wsAAQAFAAAAAAD//wsAAQAEAAAAAAAAAAsAAQAFAAAAAAD7/wwAAQACAAAAAAD8/wwAAQADAAAAAAD9/wwAAQAEAAAAAAD+/wwAAQAFAAAAAAD//wwAAQAEAAAAAAAAAAwAAQAFAAAAAAD7/w0AAQACAAAAAAD8/w0AAQADAAAAAAD9/w0AAQAEAAAAAAD+/w0AAQAFAAAAAAD//w0AAQAEAAAAAAAAAA0AAQAFAAAAAAABAAEAAQACAAAAAAACAAEAAQADAAAAAAADAAEAAQAEAAAAAAAEAAEAAQAFAAAAAAAFAAEAAQAAAAAAAAAGAAEAAQABAAAAAAABAAIAAQAAAAAAAAACAAIAAQABAAAAAAADAAIAAQACAAAAAAAEAAIAAQADAAAAAAAFAAIAAQAEAAAAAAAGAAIAAQAFAAAAAAABAAMAAQAAAAAAAAACAAMAAQABAAAAAAADAAMAAQACAAAAAAAEAAMAAQADAAAAAAAFAAMAAQAEAAAAAAAGAAMAAQAFAAAAAAABAAQAAQAAAAAAAAACAAQAAQABAAAAAAADAAQAAQACAAAAAAAEAAQAAQADAAAAAAAFAAQAAQAEAAAAAAAGAAQAAQAFAAAAAAABAAUAAQAAAAAAAAACAAUAAQABAAAAAAADAAUAAQACAAAAAAAEAAUAAQADAAAAAAAFAAUAAQAEAAAAAAAGAAUAAQAFAAAAAAABAAYAAQAAAAAAAAACAAYAAQABAAAAAAADAAYAAQACAAAAAAAEAAYAAQADAAAAAAAFAAYAAQAEAAAAAAAGAAYAAQAFAAAAAAABAAcAAQAAAAAAAAACAAcAAQABAAAAAAADAAcAAQACAAAAAAAEAAcAAQADAAAAAAAFAAcAAQAEAAAAAAAGAAcAAQAFAAAAAAABAAgAAQAAAAAAAAACAAgAAQABAAAAAAADAAgAAQACAAAAAAAEAAgAAQADAAAAAAAFAAgAAQAEAAAAAAAGAAgAAQAFAAAAAAABAAkAAQAAAAAAAAACAAkAAQABAAAAAAADAAkAAQACAAAAAAAEAAkAAQADAAAAAAAFAAkAAQAEAAAAAAAGAAkAAQAFAAAAAAABAAoAAQAAAAAAAAACAAoAAQABAAAAAAADAAoAAQACAAAAAAAEAAoAAQADAAAAAAAFAAoAAQAEAAAAAAAGAAoAAQAFAAAAAAABAAsAAQAAAAAAAAACAAsAAQABAAAAAAADAAsAAQACAAAAAAAEAAsAAQADAAAAAAAFAAsAAQAEAAAAAAAGAAsAAQAFAAAAAAABAAwAAQAAAAAAAAACAAwAAQABAAAAAAADAAwAAQACAAAAAAAEAAwAAQADAAAAAAAFAAwAAQAEAAAAAAAGAAwAAQAFAAAAAAABAA0AAQAAAAAAAAACAA0AAQABAAAAAAADAA0AAQACAAAAAAAEAA0AAQADAAAAAAAFAA0AAQAEAAAAAAAGAA0AAQAFAAAAAAAHAAEAAQACAAAAAAAIAAEAAQADAAAAAAAJAAEAAQAEAAAAAAAKAAEAAQAFAAAAAAALAAEAAQAEAAAAAAAMAAEAAQAFAAAAAAAHAAIAAQAAAAAAAAAIAAIAAQABAAAAAAAJAAIAAQACAAAAAAAKAAIAAQADAAAAAAALAAIAAQAEAAAAAAAMAAIAAQAFAAAAAAAHAAMAAQAAAAAAAAAIAAMAAQABAAAAAAAJAAMAAQACAAAAAAAKAAMAAQADAAAAAAALAAMAAQAEAAAAAAAMAAMAAQAFAAAAAAAHAAQAAQAAAAAAAAAIAAQAAQABAAAAAAAJAAQAAQACAAAAAAAKAAQAAQADAAAAAAALAAQAAQAEAAAAAAAMAAQAAQAFAAAAAAAHAAUAAQAAAAAAAAAIAAUAAQABAAAAAAAJAAUAAQACAAAAAAAKAAUAAQADAAAAAAALAAUAAQAEAAAAAAAMAAUAAQAFAAAAAAAHAAYAAQAAAAAAAAAIAAYAAQABAAAAAAAJAAYAAQACAAAAAAAKAAYAAQADAAAAAAALAAYAAQAEAAAAAAAMAAYAAQAFAAAAAAAHAAcAAQAAAAAAAAAIAAcAAQABAAAAAAAJAAcAAQACAAAAAAAKAAcAAQADAAAAAAALAAcAAQAEAAAAAAAMAAcAAQAFAAAAAAAHAAgAAQAAAAAAAAAIAAgAAQABAAAAAAAJAAgAAQACAAAAAAAKAAgAAQADAAAAAAALAAgAAQAEAAAAAAAMAAgAAQAFAAAAAAAHAAkAAQAAAAAAAAAIAAkAAQABAAAAAAAJAAkAAQACAAAAAAAKAAkAAQADAAAAAAALAAkAAQAEAAAAAAAMAAkAAQAFAAAAAAAHAAoAAQAAAAAAAAAIAAoAAQABAAAAAAAJAAoAAQACAAAAAAAKAAoAAQADAAAAAAALAAoAAQAEAAAAAAAMAAoAAQAFAAAAAAAHAAsAAQAAAAAAAAAIAAsAAQABAAAAAAAJAAsAAQACAAAAAAAKAAsAAQADAAAAAAALAAsAAQAEAAAAAAAMAAsAAQAFAAAAAAAHAAwAAQAAAAAAAAAIAAwAAQABAAAAAAAJAAwAAQACAAAAAAAKAAwAAQADAAAAAAALAAwAAQAEAAAAAAAMAAwAAQAFAAAAAAAHAA0AAQAAAAAAAAAIAA0AAQABAAAAAAAJAA0AAQACAAAAAAAKAA0AAQADAAAAAAALAA0AAQAEAAAAAAAMAA0AAQAFAAAAAAANAAEAAQAAAAAAAAAOAAEAAQABAAAAAAAPAAEAAQACAAAAAAAQAAEAAQADAAAAAAARAAEAAQAEAAAAAAASAAEAAQAFAAAAAAANAAIAAQAAAAAAAAAOAAIAAQABAAAAAAAPAAIAAQACAAAAAAAQAAIAAQADAAAAAAARAAIAAQAEAAAAAAASAAIAAQAFAAAAAAANAAMAAQAAAAAAAAAOAAMAAQABAAAAAAAPAAMAAQACAAAAAAAQAAMAAQADAAAAAAARAAMAAQAEAAAAAAASAAMAAQAFAAAAAAANAAQAAQAAAAAAAAAOAAQAAQABAAAAAAAPAAQAAQACAAAAAAAQAAQAAQADAAAAAAARAAQAAQAEAAAAAAASAAQAAQAFAAAAAAANAAUAAQAAAAAAAAAOAAUAAQABAAAAAAAPAAUAAQACAAAAAAAQAAUAAQADAAAAAAARAAUAAQAEAAAAAAASAAUAAQAFAAAAAAANAAYAAQAAAAAAAAAOAAYAAQABAAAAAAAPAAYAAQACAAAAAAAQAAYAAQADAAAAAAARAAYAAQAEAAAAAAASAAYAAQAFAAAAAAANAAcAAQAAAAAAAAAOAAcAAQABAAAAAAAPAAcAAQACAAAAAAAQAAcAAQADAAAAAAARAAcAAQAEAAAAAAASAAcAAQAFAAAAAAANAAgAAQAAAAAAAAAOAAgAAQABAAAAAAAPAAgAAQACAAAAAAAQAAgAAQADAAAAAAARAAgAAQAEAAAAAAASAAgAAQAFAAAAAAANAAkAAQAAAAAAAAAOAAkAAQABAAAAAAAPAAkAAQACAAAAAAAQAAkAAQADAAAAAAARAAkAAQAEAAAAAAASAAkAAQAFAAAAAAANAAoAAQAAAAAAAAAOAAoAAQABAAAAAAAPAAoAAQACAAAAAAAQAAoAAQADAAAAAAARAAoAAQAEAAAAAAASAAoAAQAFAAAAAAANAAsAAQAAAAAAAAAOAAsAAQABAAAAAAAPAAsAAQACAAAAAAAQAAsAAQADAAAAAAARAAsAAQAEAAAAAAASAAsAAQAFAAAAAAANAAwAAQAAAAAAAAAOAAwAAQABAAAAAAAPAAwAAQACAAAAAAAQAAwAAQADAAAAAAARAAwAAQAEAAAAAAASAAwAAQAFAAAAAAANAA0AAQAAAAAAAAAOAA0AAQABAAAAAAAPAA0AAQACAAAAAAAQAA0AAQADAAAAAAARAA0AAQAEAAAAAAASAA0AAQAFAAAAAAATAAEAAQAAAAAAAAAUAAEAAQABAAAAAAAVAAEAAQACAAAAAAAWAAEAAQADAAAAAAAXAAEAAQAEAAAAAAAYAAEAAQAFAAAAAAATAAIAAQAAAAAAAAAUAAIAAQABAAAAAAAVAAIAAQACAAAAAAAWAAIAAQADAAAAAAAXAAIAAQAEAAAAAAAYAAIAAQAFAAAAAAATAAMAAQAAAAAAAAAUAAMAAQABAAAAAAAVAAMAAQACAAAAAAAWAAMAAQADAAAAAAAXAAMAAQAEAAAAAAAYAAMAAQAFAAAAAAATAAQAAQAAAAAAAAAUAAQAAQABAAAAAAAVAAQAAQACAAAAAAAWAAQAAQADAAAAAAAXAAQAAQAEAAAAAAAYAAQAAQAFAAAAAAATAAUAAQAAAAAAAAAUAAUAAQABAAAAAAAVAAUAAQACAAAAAAAWAAUAAQADAAAAAAAXAAUAAQAEAAAAAAAYAAUAAQAFAAAAAAATAAYAAQAAAAAAAAAUAAYAAQABAAAAAAAVAAYAAQACAAAAAAAWAAYAAQADAAAAAAAXAAYAAQAEAAAAAAAYAAYAAQAFAAAAAAATAAcAAQAAAAAAAAAUAAcAAQABAAAAAAAVAAcAAQACAAAAAAAWAAcAAQADAAAAAAAXAAcAAQAEAAAAAAAYAAcAAQAFAAAAAAATAAgAAQAAAAAAAAAUAAgAAQABAAAAAAAVAAgAAQACAAAAAAAWAAgAAQADAAAAAAAXAAgAAQAEAAAAAAAYAAgAAQAFAAAAAAATAAkAAQAAAAAAAAAUAAkAAQABAAAAAAAVAAkAAQACAAAAAAAWAAkAAQADAAAAAAAXAAkAAQAEAAAAAAAYAAkAAQAFAAAAAAATAAoAAQAAAAAAAAAUAAoAAQABAAAAAAAVAAoAAQACAAAAAAAWAAoAAQADAAAAAAAXAAoAAQAEAAAAAAAYAAoAAQAFAAAAAAATAAsAAQAAAAAAAAAUAAsAAQABAAAAAAAVAAsAAQACAAAAAAAWAAsAAQADAAAAAAAXAAsAAQAEAAAAAAAYAAsAAQAFAAAAAAATAAwAAQAAAAAAAAAUAAwAAQABAAAAAAAVAAwAAQACAAAAAAAWAAwAAQADAAAAAAAXAAwAAQAEAAAAAAAYAAwAAQAFAAAAAAATAA0AAQAAAAAAAAAUAA0AAQABAAAAAAAVAA0AAQACAAAAAAAWAA0AAQADAAAAAAAXAA0AAQAEAAAAAAAYAA0AAQAFAAAAAAAZAAEAAQAAAAAAAAAaAAEAAQABAAAAAAAbAAEAAQACAAAAAAAcAAEAAQADAAAAAAAZAAIAAQAAAAAAAAAaAAIAAQABAAAAAAAbAAIAAQACAAAAAAAcAAIAAQADAAAAAAAZAAMAAQAAAAAAAAAaAAMAAQABAAAAAAAbAAMAAQACAAAAAAAcAAMAAQADAAAAAAAZAAQAAQAAAAAAAAAaAAQAAQABAAAAAAAbAAQAAQACAAAAAAAcAAQAAQADAAAAAAAZAAUAAQAAAAAAAAAaAAUAAQABAAAAAAAbAAUAAQACAAAAAAAcAAUAAQADAAAAAAAZAAYAAQAAAAAAAAAaAAYAAQABAAAAAAAbAAYAAQACAAAAAAAcAAYAAQADAAAAAAAZAAcAAQAAAAAAAAAaAAcAAQABAAAAAAAbAAcAAQACAAAAAAAcAAcAAQADAAAAAAAZAAgAAQAAAAAAAAAaAAgAAQABAAAAAAAbAAgAAQACAAAAAAAcAAgAAQADAAAAAAAZAAkAAQAAAAAAAAAaAAkAAQABAAAAAAAbAAkAAQACAAAAAAAcAAkAAQADAAAAAAAZAAoAAQAAAAAAAAAaAAoAAQABAAAAAAAbAAoAAQACAAAAAAAcAAoAAQADAAAAAAAZAAsAAQAAAAAAAAAaAAsAAQABAAAAAAAbAAsAAQACAAAAAAAcAAsAAQADAAAAAAAZAAwAAQAAAAAAAAAaAAwAAQABAAAAAAAbAAwAAQACAAAAAAAcAAwAAQADAAAAAAAZAA0AAQAAAAAAAAAaAA0AAQABAAAAAAAbAA0AAQACAAAAAAAcAA0AAQADAAAAAAD5/w0AAQAAAAAAAAD6/w0AAQABAAAAAAD5/wwAAQAAAAAAAAD6/wwAAQABAAAAAAD5/wsAAQAAAAAAAAD6/wsAAQABAAAAAAD5/woAAQAAAAAAAAD6/woAAQABAAAAAAD5/wkAAQAAAAAAAAD6/wkAAQABAAAAAAD5/wgAAQAAAAAAAAD6/wgAAQABAAAAAAD5/wcAAQAAAAAAAAD6/wcAAQABAAAAAAD5/wYAAQAAAAAAAAD6/wYAAQABAAAAAAD5/wUAAQAAAAAAAAD6/wUAAQABAAAAAAD5/wQAAQAAAAAAAAD6/wQAAQABAAAAAAD5/wMAAQAAAAAAAAD6/wMAAQABAAAAAAD5/wIAAQAAAAAAAAD6/wIAAQABAAAAAAD5/wEAAQAAAAAAAAD6/wEAAQABAAAAAAD5/wAAAQAAAAAAAAD6/wAAAQABAAAAAAD7/wAAAQACAAAAAAD8/wAAAQADAAAAAAD9/wAAAQAEAAAAAAD+/wAAAQAFAAAAAAD//wAAAQAAAAAAAAAAAAAAAQABAAAAAAABAAAAAQACAAAAAAACAAAAAQADAAAAAAADAAAAAQAEAAAAAAAEAAAAAQAFAAAAAAAFAAAAAQAAAAAAAAAGAAAAAQABAAAAAAAHAAAAAQACAAAAAAAIAAAAAQADAAAAAAAJAAAAAQAEAAAAAAAKAAAAAQAFAAAAAAALAAAAAQAAAAAAAAAMAAAAAQABAAAAAAANAAAAAQACAAAAAAAOAAAAAQADAAAAAAAPAAAAAQAEAAAAAAAQAAAAAQAFAAAAAAARAAAAAQAAAAAAAAASAAAAAQABAAAAAAATAAAAAQACAAAAAAAUAAAAAQADAAAAAAAVAAAAAQAEAAAAAAAWAAAAAQAFAAAAAAAXAAAAAQAAAAAAAAAYAAAAAQABAAAAAAAZAAAAAQACAAAAAAAaAAAAAQADAAAAAAAbAAAAAQAEAAAAAAAcAAAAAQAFAAAAAAD5/xQAAQABAAMAAAD5/xUAAQABAAMAAAD6/xQAAQABAAMAAAD6/xUAAQABAAMAAAD7/xQAAQABAAMAAAD7/xUAAQABAAMAAAD8/xQAAQABAAMAAAD8/xUAAQABAAMAAAD9/xQAAQABAAMAAAD9/xUAAQABAAMAAAD+/xQAAQABAAMAAAD+/xUAAQABAAMAAAD//xQAAQABAAMAAAD//xUAAQABAAMAAAAAABQAAQABAAMAAAAAABUAAQABAAMAAAABABQAAQABAAMAAAABABUAAQABAAMAAAACABQAAQABAAMAAAACABUAAQABAAMAAAADABQAAQABAAMAAAADABUAAQABAAMAAAAEABQAAQABAAMAAAAEABUAAQABAAMAAAAFABQAAQABAAMAAAAFABUAAQABAAMAAAAGABQAAQABAAMAAAAGABUAAQABAAMAAAAHABQAAQABAAMAAAAHABUAAQABAAMAAAAIABQAAQABAAMAAAAIABUAAQABAAMAAAAJABQAAQABAAMAAAAJABUAAQABAAMAAAAKABQAAQABAAMAAAAKABUAAQABAAMAAAALABQAAQABAAMAAAALABUAAQABAAMAAAAMABQAAQABAAMAAAAMABUAAQABAAMAAAANABQAAQABAAMAAAANABUAAQABAAMAAAAOABQAAQABAAMAAAAOABUAAQABAAMAAAAPABQAAQABAAMAAAAPABUAAQABAAMAAAAQABQAAQABAAMAAAAQABUAAQABAAMAAAARABQAAQABAAMAAAARABUAAQABAAMAAAASABQAAQABAAMAAAASABUAAQABAAMAAAATABQAAQABAAMAAAATABUAAQABAAMAAAAUABQAAQABAAMAAAAUABUAAQABAAMAAAAVABQAAQABAAMAAAAVABUAAQABAAMAAAAWABQAAQABAAMAAAAWABUAAQABAAMAAAAXABQAAQABAAMAAAAXABUAAQABAAMAAAAYABQAAQABAAMAAAAYABUAAQABAAMAAAAZABQAAQABAAMAAAAZABUAAQABAAMAAAAaABQAAQABAAMAAAAaABUAAQABAAMAAAAbABQAAQABAAMAAAAbABUAAQABAAMAAAAcABQAAQABAAMAAAAcABUAAQABAAMAAAA=")
tile_set = SubResource("TileSet_tkotr")

[node name="player" parent="." instance=ExtResource("2_avcrt")]
position = Vector2(182, 284)
scale = Vector2(0.7, 0.7)
collision_mask = 3

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(242, 176)
zoom = Vector2(2, 2)

[node name="block_tile" type="TileMapLayer" parent="."]
position = Vector2(5, 5)
tile_set = SubResource("TileSet_lyr7k")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 9.0
offset_top = 33.0
offset_right = 49.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="win" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(574.001, 328.25)
scale = Vector2(1.22083, 0.91875)
texture = ExtResource("6_e52x1")

[node name="lose" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(572.5, 329)
scale = Vector2(2.65682, 1.49091)
texture = ExtResource("7_wm3a2")

[node name="restart" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 428.0
offset_top = 449.0
offset_right = 736.0
offset_bottom = 512.0
theme_override_colors/font_color = Color(0.384851, 0.660952, 0.454344, 1)
theme_override_font_sizes/font_size = 40
text = "Начать заново"

[node name="exit" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 510.0
offset_top = 549.0
offset_right = 651.0
offset_bottom = 612.0
theme_override_colors/font_color = Color(0.384314, 0.662745, 0.454902, 1)
theme_override_font_sizes/font_size = 40
text = "Выйти"

[connection signal="gameover" from="player" to="." method="_on_player_gameover"]
[connection signal="pressed" from="CanvasLayer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/exit" to="." method="_on_exit_pressed"]
